# dirsum

./: Cargo.toml  README.md
src/: cli.rs  core.rs  main.rs  parse.rs
