[package]
name = "dirsum"
version = "0.1.0"
authors = ["everettjf <everettjf@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filesize = "0.2.0"
structopt = "0.3.21"
serde_json = "1.0.64"

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
